[metadata]
name = django_admin_auth_keycloak
version = 0.3
description = A Django app to validate SSO tokens.
long_description = file: README.rst
url = https://www.example.com/
author = Samyak Jain
author_email = samyak.jain@agrevolution.in
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
setup_requires =
    setuptools >= 40.8.0
python_requires = >=3.6
install_requires =
    Django >= 3.1
    django-allauth>=0.45.0